--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -29,7 +29,7 @@
     <script src="js/morph.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
-    <script src="https://localhost:7185/SparcAuthenticator.js"></script>
+    <script src="https://engine.sparc.coop/SparcAuthenticator.js"></script>
     <script>
         // use a script tag or an external JS file
         document.addEventListener("DOMContentLoaded", (event) => {
@@ -37,7 +37,7 @@
          // gsap code here!
         });
     </script>
-       <script type="module" src="https://localhost:7194/tovik.js"></script>
+       <script type="module" src="https://tovik.app/tovik.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
 </body>
 </html>
