Move Aura to Sparc Engine Client to prep for reusing in Tovik

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -40,7 +40,7 @@
                         </div>
                         @if (showUserProfile)
                         {
-                            <NewUserProfile OnClose="CloseUserProfile" />
+                            <Sparc.Engine.Client.Aura.SparcAura OnClose="CloseUserProfile" />
                         }
                     </div>
                 </div>
