Enhance user profile management and update configurations
- Updated `compilerconfig.json` to include SCSS entries for Aura components.
- Modified `compilerconfig.json.defaults` to set default compiler options.
- Simplified user profile handling in `NavMenu.razor` by directly rendering `SparcAura`.
- Introduced a modal overlay in `SparcAura.razor` for user profile management, including sections for contact verification and passkey login.
- Updated CSS and SCSS files for `SparcAura` to improve layout and responsiveness.
- Adjusted `Sparc.Engine.Client.csproj` to ensure `compilerconfig.json` is correctly included.
- Added `disableBodyScrolling` JavaScript function to manage scrolling behavior during modal display.
- Updated `Html.razor` to inject configuration settings and include `SparcAuthenticator.js`.
- Changed routing path in `Index.razor` from "/domains" to "/".
- Streamlined navigation menu in `NavMenu.razor` by removing the profile button.
- Enhanced layout and functionality of the user profile modal in `SparcAura.razor` and `SparcAura.razor.scss`.

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -33,15 +33,7 @@
                     <hr />
                     <div class="menu-profile">
                         <h5>Profile</h5>
-                        <div class="account-btn" @onclick="OpenUserProfile">
-                            @* Hi, @User.Identity?.Name. *@
-                           
-                            <ProfileIcon />
-                        </div>
-                        @if (showUserProfile)
-                        {
-                            <Sparc.Engine.Client.Aura.SparcAura OnClose="CloseUserProfile" />
-                        }
+                        <Sparc.Engine.Client.Aura.SparcAura />
                     </div>
                 </div>
             </div>
@@ -147,19 +139,5 @@
         }
 
         StateHasChanged();
-    }
-
-    private bool showUserProfile = false;
-
-    private async Task OpenUserProfile()
-    {
-        showUserProfile = true;
-        await Js.InvokeVoidAsync("disableBodyScrolling", true);
-    }
-
-    private async Task CloseUserProfile()
-    {
-        showUserProfile = false;
-        await Js.InvokeVoidAsync("disableBodyScrolling", false);
     }
 }
