--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -20,7 +20,7 @@
     <ImportMap />
     
     <HeadOutlet @rendermode="new InteractiveServerRenderMode(false)" />
-    <Sparc.Engine.Client.Marketing.MatomoAnalytics SiteId="1" />
+    <Sparc.Blossom.SparcEngine.Marketing.MatomoAnalytics SiteId="1" />
 </head>
 <body>
     <Sparc.Blossom.BlossomApp Program="Program" DefaultLayout="MainLayout" @rendermode="new InteractiveServerRenderMode(false)" />
