--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -33,7 +33,7 @@
                     <hr />
                     <div class="menu-profile">
                         <h5>Profile</h5>
-                        <Sparc.Engine.Client.Aura.SparcAura />
+                        <Sparc.Blossom.SparcEngine.Aura.SparcAura />
                     </div>
                 </div>
             </div>
