Fix passkey auth initialization

--- a/Sparc2/Sparc2/Shared/Components/Auth.razor
+++ b/Sparc2/Sparc2/Shared/Components/Auth.razor
@@ -99,7 +99,7 @@
     {
         if (firstRender)
         {
-            await JS.InvokeVoidAsync("initSparcAuthenticator", ApiKey);
+            await JS.InvokeVoidAsync("initialize", ApiKey);
             await FetchUserInfo();
         }
     }
