--- a/Sparc2/Sparc2/Catalog/ProductActions.razor
+++ b/Sparc2/Sparc2/Catalog/ProductActions.razor
@@ -1,7 +1,7 @@
 ﻿@using Sparc.Engine
 <div class="product-actions">
     <div class="tabs">
-        <button id="help-tab" class="product-tab" data-id=@ActiveProduct.Id><h6>Need Help ?</h6></button>
+        <button id="demo-tab" class="product-tab" data-id=@ActiveProduct.Id><h6>Try It Out</h6></button>
         @if (Price != null)
         {
             <button id="purchase-tab" class="product-tab" data-id=@ActiveProduct.Id>
@@ -12,18 +12,14 @@
                 </div>
             </button>
         }
-        <button id="download-tab" class="product-tab" data-id=@ActiveProduct.Id><h6>Try</h6></button>
+        <button id="help-tab" class="product-tab" data-id=@ActiveProduct.Id><h6>Need Help ?</h6></button>
     </div>
 </div>
 
 @code {
     [Parameter] public Product ActiveProduct { get; set; } = new Product();
     [Parameter] public GetProductResponse? Price { get; set; }
-    [Parameter] public EventCallback OnClickHelp { get; set; }
-    [Parameter] public EventCallback OnClickPurchase { get; set; }
-    [Parameter] public EventCallback OnClickDownload { get; set; }
-    [Parameter] public EventCallback OnClickSurvey { get; set; }
-    [Parameter] public EventCallback OnClickTryDemo { get; set; }
+    [Parameter] public EventCallback<string> OnTabChanged { get; set; }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -34,24 +30,18 @@
     }
 
     [JSInvokable("OnClickTab")]
-    public void OnClickTab(string tab)
+    public async Task OnClickTab(string tab)
     {
         switch (tab)
         {
             case "help-tab":
-                OnClickHelp.InvokeAsync();
+                await OnTabChanged.InvokeAsync("Help");
                 break;
             case "purchase-tab":
-                OnClickPurchase.InvokeAsync();
-                break;
-            case "download-tab":
-                OnClickDownload.InvokeAsync();
-                break;
-            case "survey-tab":
-                OnClickSurvey.InvokeAsync();
+                await OnTabChanged.InvokeAsync("Purchase");
                 break;
             case "demo-tab":
-                OnClickTryDemo.InvokeAsync();
+                await OnTabChanged.InvokeAsync("Demo");
                 break;
         }
     }
