--- a/Sparc2/Sparc2/Catalog/_Imports.razor
+++ b/Sparc2/Sparc2/Catalog/_Imports.razor
@@ -1,5 +1,6 @@
 @using Sparc.Engine.Billing
 @using Sparc.Core.Billing
+@using Sparc.Blossom.Authentication
 
 @inject ISparcBilling Billing
 @inject IJSRuntime Js
