--- a/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
@@ -96,7 +96,7 @@
             }
         }
 
-        &#demo-tab {
+        &#demo-tab, &#download-tab {
             background: var(--gray-600);
         }
     }
