--- a/Sparc2/Sparc2/Catalog/Purchase/CurrencySelector.razor
+++ b/Sparc2/Sparc2/Catalog/Purchase/CurrencySelector.razor
@@ -1,14 +1,15 @@
 @using System.Globalization
 @using Sparc.Engine
+@using Sparc.Engine.Aura
 
 <div class="form-group">
     <label>
         <span>Currency *</span>
-        <select value="@SelectedCurrency?.Id" @onchange="OnCurrencyChanged">
-            @foreach (var cur in Currencies)
+        <select value="@Avatar.Currency?.Id" @onchange="OnCurrencyChanged" translate="no">
+            @foreach (var cur in Currencies.OrderBy(x => x.NativeName))
             {
-                <option value="@cur.Id" selected="@(SelectedCurrency?.Id == cur.Id ? " selected" : null)">
-                    @cur.Name (@cur.Symbol)
+                <option value="@cur.Id" selected="@(Avatar.Currency?.Id == cur.Id ? "selected" : null)">
+                    @cur.NativeName (@cur.Symbol@(cur.NativeName == cur.Name ? "" : (" " + cur.Name)))
                 </option>
             }
         </select>
@@ -16,23 +17,22 @@
 </div>
 
 @inject SparcEvents Events
+@inject ISparcAura Aura
 @code {
+    [Parameter] public required BlossomAvatar Avatar { get; set; }
     List<SparcCurrency> Currencies = [];
-    SparcCurrency? SelectedCurrency;
 
     protected override async Task OnInitializedAsync()
     {
         if (!Currencies.Any())
             Currencies = await Billing.GetCurrenciesAsync();
-
-        SelectedCurrency = await Billing.GetUserCurrencyAsync();
     }
 
     private async Task OnCurrencyChanged(ChangeEventArgs e)
     {
         var currency = e.Value?.ToString();
-        SelectedCurrency = Currencies.First(c => c.Id == currency);
-        await Billing.SetUserCurrencyAsync(SelectedCurrency);
-        await Events.OnCurrencyChanged(SelectedCurrency);
+        Avatar.Currency = Currencies.First(c => c.Id == currency);
+        await Aura.UpdateUserInfo(Avatar);
+        await Events.OnCurrencyChanged(Avatar.Currency);
     }
 }
