--- a/Sparc2/Sparc2/Catalog/Purchase/CurrencySelector.razor
+++ b/Sparc2/Sparc2/Catalog/Purchase/CurrencySelector.razor
@@ -6,6 +6,7 @@
     <label>
         <span>Currency *</span>
         <select value="@Avatar.Currency?.Id" @onchange="OnCurrencyChanged" translate="no">
+            <option value="">Choose a currency...</option>
             @foreach (var cur in Currencies.OrderBy(x => x.NativeName))
             {
                 <option value="@cur.Id" selected="@(Avatar.Currency?.Id == cur.Id ? "selected" : null)">
@@ -31,6 +32,9 @@
     private async Task OnCurrencyChanged(ChangeEventArgs e)
     {
         var currency = e.Value?.ToString();
+        if (string.IsNullOrWhiteSpace(currency))
+            return;
+
         Avatar.Currency = Currencies.First(c => c.Id == currency);
         await Aura.UpdateUserInfo(Avatar);
         await Events.OnCurrencyChanged(Avatar.Currency);
