--- a/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
@@ -96,8 +96,12 @@
             }
         }
 
-        &#demo-tab, &#download-tab {
+        &#demo-tab {
             background: var(--gray-600);
+        }
+
+        &#download-tab {
+            background: var(--blue);
         }
     }
 }
